# abossenbroek-claude-plugins

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  commitlint.config.js  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
context-engineering/: README.md
context-engineering/.claude-plugin/: plugin.json
context-engineering/agents/: audit-coordinator.md  improve-coordinator.md  plan-coordinator.md
context-engineering/commands/: audit-context.md  generate-handoffs.md  improve-plugin.md  optimize-plan.md
context-engineering/coordinator-internal/: audit-synthesizer.md  context-flow-mapper.md  context-optimizer.md  handoff-improver.md  improvement-synthesizer.md  orchestration-improver.md  plan-analyzer.md  plugin-analyzer.md
context-engineering/hooks/: hooks.json  validate-agent-output.py
context-engineering/scripts/: file_cache.py  state_manager.py  validate_improvement_output.py
context-engineering/templates/: coordinator-agent.md  handoff-schema.yaml  hooks-config.json  pydantic-model.py  sub-agent.md
red-agent/: .jscpd.json  CLAUDE.md  README.md  package-lock.json  package.json
red-agent/.claude-plugin/: plugin.json
red-agent/agents/: fix-coordinator.md  fix-orchestrator.md  pal-availability-checker.md  pr-analysis-coordinator.md  red-team-coordinator.md
red-agent/commands/: pr-redteam-branch.md  pr-redteam-diff.md  pr-redteam-staged.md  pr-redteam-working.md  red-team-w-fix.md  redteam-fix-orchestrator.md  redteam.md
red-agent/coordinator-internal/: attack-strategist.md  change-scope-analyzer.md  code-context-attacker.md  (+13 more)
schemas/: marketplace.schema.json  plugin.schema.json
scripts/: check_config_hygiene.py  validate_against_claude_code.py  validate_agent_files.py  validate_plugin_schemas.py  verify_npm_integrity.py
tests/: __init__.py  conftest.py  test_check_config_hygiene.py  test_cli_check_config_hygiene.py  test_cli_validate_agent_output.py  test_context_engineering_analysis.py  test_context_engineering_grounding.py  test_context_engineering_models.py  test_context_engineering_state.py  test_context_engineering_synthesis.py  test_error_message_parsing.py  test_hook_output_format.py  test_hook_retry_flow.py  test_jscpd_availability.py  test_pr_analysis.py  test_pydantic_models.py  test_validate_agent_files.py  test_validate_agent_output.py  test_validate_plugin_schemas.py
(+77 files in other folders)
